style.css
/* GENERAL PROPERTIES */

* {
    margin: 0;
    padding: 0;
    --color-bg: #FAF8F9;
    --color-text1: #29170a;
    --color-text2:rgb(243, 217, 170);
    --color-text3:rgb(252, 239, 215);
    --color-accent: #5c081a;
}

body {
    display: flex;
    font-family: 'Source Sans Pro', sans-serif;
    text-align: center;
    min-height: 100vh;
}

.section-main,
.section-register {
    display: flex;
    flex-direction: column;
    align-items: center;
}



/* MAIN SECTION */

.section-main {
    justify-content: space-between;
    background-image: url(./wine.jpg);
    background-size: 1300px;
    padding: 0 5em;
}

.section-main h1 {
    font-size: 3rem;
    color: var(--color-text3);
    font-weight: 300;
    margin-bottom: 1em;
}

.section-main h2 {
    font-size: 2rem;
    color: var(--color-text2);
    margin-bottom: 2em;
    text-shadow: 1px 1px 4px black;
}

.section-main h3 {
    order: -2;
    padding: 0.5em 0;
    font-size: 1.5rem;
    border-top: 10px solid var(--color-text2);
    color: var(--color-text2);
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 2px;
    
}

.section-main-title-container {
    margin-bottom: 5em;
}

strong {
    font-weight: 700;
}


/* REGISTER SECTION */

.section-register {
    justify-content: center; 
    background: var(--color-bg);
    /* width: 70%; */
    padding: 3em;
}

h3,
p {
    margin-bottom: 2em;
}

.section-register h2 {
    font-size: 3rem;
    color: #251509;
    font-weight: 300;
    margin-bottom: 1em;
}

.section-register h3 {
    font-size: 1.8rem;
    font-weight: 400;
    text-transform: uppercase;
    color: var(--color-accent)
}

.section-register p {
    padding: 0 2em;
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.5;
    margin-bottom: 3em;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    font-family: inherit;
}

input {
    border: 0;
    min-height: 4em;
    margin-bottom: 2.5em;
    min-width: 25vw;
    text-align: inherit;
    padding: .25em;
}

button {
    background: var(--color-accent);
    color: white;
    border: 0;
    border-radius: 5px;
    padding: 1em;
    align-self: center;
    cursor: pointer;
    font-size: 1rem;
    font-weight: 700;
    text-transform: uppercase;
    transition: 0.5s;
}

button:hover, 
button:focus {
    filter: brightness(120%);
    transition: 0.5s;
}



/* MEDIA QUERIES */

@media (max-width: 800px) {
    body {
        flex-direction: column;
    }

    .section-main {
        align-items: space-between; 
        margin-bottom: 4em;
        background-size: 800px;
        height: 600px;
        padding: 0 1em;
    }

    .section-main h1 {
        font-size: 2rem;
    }

    .section-main h2 {
        font-size: 2rem;
    }

    .section-main h3 {
        font-size: 1rem;
    }

    .section-register {
        padding: 0;
        width: auto;
    }

    .section-register h2 {
        font-size: 2rem;
    }

    .section-register h3 {
        font-size: 1.8rem;
    }

    .section-register p {
        font-size: 1.3rem;
    }

    input {
        min-width: 75vw;
    }

    button {
        margin-bottom: 10em;
    }

}

